# syndwarsfx

./: Makefile.am  README.md  configure.ac
bfariadne/src/: trstate.c
bflibrary/: Makefile.am  configure.ac
bflibrary/include/: bfjoyst.h  bfkeybd.h  bfmemory.h
bflibrary/src/general/: gkeybd.c
bflibrary/src/x86-dos-watcom/: joy_modul1.sx  joy_modul2.sx  sjoyst.c
bflibrary/src/x86-win-sdl/: sjoyst.c  smemory.c  sscreen.c  swindows.c
bflibrary/src/x86-win-sdl2/: sjoyst.c  sscreen.c  swindows.c
bfsmacklib/src/: bfsmacklib_s.sx  smack2ail.c
conf/: Makefile.am  miss000.ini  panel0-0.ini  panel0-1.ini  panel0-3.ini  panel1-0.ini  panel1-1.ini  panel1-3.ini  panel2-0.ini  panel2-1.ini  panel2-3.ini  pop0-0.ini  pop0-1.ini  pop0-3.ini  pop1-0.ini  pop1-1.ini  pop1-3.ini  pop2-0.ini  pop2-1.ini  pop2-3.ini  wrappers_game.conf
lang/: guitext_comm_pol.po
src/: Makefile.am  bat.c  bflib_joyst.c  bflib_joyst.h  bigmap.c  bigmap.h  bmbang.h  building.c  building.h  campaign.c  command.c  command.h  display.c  display.h  drawtext_wrp.c  engindrwlstm.c  engindrwlstm.h  engindrwlstm_wrp.c  engindrwlstm_wrp.h  engindrwlstx.c  engindrwlstx_tng.c  enginfexpl.c  enginfexpl.h  enginpriobjs.c  enginshadws.c  enginshadws.h  engintext.c  engintrns.c  engintrns.h  feappbar.c  febrief.c  fecntrls.c  fecryo.c  fedebrief.c  feequip.c  felogin.c  femain.c  femain.h  fenet.c  feoptions.c  (+76 more)
swrendersoft/: Makefile.am  configure.ac
swrendersoft/include/: drawshape.h  enginbckt.h  engincam.h  engincolour.h  engindrwlstm.h  engindrwlstx.h  enginfexpl.h  enginlights.h  enginpeff.h  enginpriobjs.h  enginprops.h  enginshadws.h  enginsngobjs.h  enginsngtxtr.h  engintrns.h  enginzoom.h  frame_sprani.h
swrendersoft/src/: app_spr_init.c  app_text_cw.c  app_text_sf.c  drawshape.c  drawtext.c  engincam.c  engincolour.c  engindrwlstm.c  engindrwlstm_3d.c  engindrwlstx.c  engindrwlstx_fac.c  engindrwlstx_spr.c  enginfexpl.c  enginfloor.c  enginlights.c  enginpeff.c  enginpriobjs.c  enginprops.c  enginshadws.c  enginshrapn.c  enginsngobjs.c  enginsngtxtr.c  engintrns.c  enginzoom.c  frame_sprani.c
swrendersoft/tests/: swrend_test_engn_fr01.c  swrtstlog.h
