confdir = $(prefix)/$(PACKAGE)/conf
conf_DATA = \
	cities.ini \
	cybmods.ini \
	people.ini \
	panel0-0.ini \
	panel0-1.ini \
	panel0-3.ini \
	panel1-0.ini \
	panel1-1.ini \
	panel1-3.ini \
	panel2-0.ini \
	panel2-1.ini \
	panel2-3.ini \
	pop0-0.ini \
	pop0-1.ini \
	pop0-3.ini \
	pop1-0.ini \
	pop1-1.ini \
	pop1-3.ini \
	pop2-0.ini \
	pop2-1.ini \
	pop2-3.ini \
	rules.ini \
	weapons.ini \
	miss000.ini \
	miss001.ini \
	miss002.ini \
	miss003.ini \
	miss099.ini \
	midipats.cfg

tone000dir = $(prefix)/$(PACKAGE)/conf/Tone_000
tone000_DATA = \
	Tone_000/000_Acoustic_Grand_Piano.pat \
	Tone_000/004_Electric_Piano_1_Rhodes.pat

EXTRA_DIST = \
	conf \
	tone000 \
	fnmap_posix.conf \
	fnmap_windows.conf \
	wrappers_dos.conf \
	wrappers_game.conf \
	wrappers_libc.conf \
	wrappers_util.conf
